crates/oxc_react_compiler/tests/snapshots/meta-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/meta-property.mjs
---
function a() {
	return import.meta.url;
}
function b() {
	let a = 0;
	if (import.meta.url) {
		a = 1;
	}
	return a;
}
function c() {
	let a = 0;
	if (import.meta.foo) {
		a = 1;
	}
	return a;
}
function d() {
	let a = 0;
	if (import.meta) {
		a = 1;
	}
	return a;
}
