crates/oxc_react_compiler/tests/snapshots/method-call-computed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/method-call-computed.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c) {
	const $ = _c(8);
	let t0;
	if ($[0] !== a) {
		t0 = makeObject(a);
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	let t1;
	if ($[2] !== a) {
		t1 = makeObject(a);
		$[2] = a;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	const y = t1;
	let t2;
	if ($[4] !== b || $[5] !== x || $[6] !== y.method) {
		t2 = x[y.method](b);
		$[4] = b;
		$[5] = x;
		$[6] = y.method;
		$[7] = t2;
	} else {
		t2 = $[7];
	}
	const z = t2;
	return z;
}
