crates/oxc_react_compiler/tests/snapshots/multiple-components-first-is-invalid.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/multiple-components-first-is-invalid.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Hooks: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)", labels: [LabeledSpan { label: None, span: Span { start: 126, end: 133 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

import { c as _c } from "react/compiler-runtime";
// @panicThreshold:"none"
import { useHook } from "shared-runtime";
function InvalidComponent(props) {
	if (props.cond) {
		useHook();
	}
	return <div>Hello World!</div>;
}
function ValidComponent(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.greeting) {
		t0 = <div>{props.greeting}</div>;
		$[0] = props.greeting;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
